@@ -30,6 +30,7 @@ NEWS
   * [auth] new method "extern" to use already present REMOTE_USER (from magnet, ssl, ...) (fixes #2436)
   * [core] remove requirement that default doc-root has to exist, there are reasonable scenarios not requiring static files at all
   * [core] check whether server.chroot exists
+  * [mod_simple_vhost] fix cache; skip module if simple-vhost.server-root is empty (thx rm for reporting)
 
 - 1.4.32 - 2012-11-21
   * Code cleanup with clang/sparse (fixes #2437, thx kibi)
